--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -39,8 +39,9 @@
      <Compile Include="Assets\Script\CameraController.cs" />
      <Compile Include="Assets\Simple 2D Platformer BE2\ReadMe\Scripts\ReadmeBE2.cs" />
      <Compile Include="Assets\Script\GameManager.cs" />
-     <Compile Include="Assets\Enemy.cs" />
+     <Compile Include="Assets\Script\Enemy\Enemy.cs" />
      <Compile Include="Assets\Script\PlayerScript\PlayerMovement.cs" />
+     <Compile Include="Assets\UIManager.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.3.5f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
