--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -42,6 +42,8 @@
      <Compile Include="Assets\Script\GameManager.cs" />
      <Compile Include="Assets\Script\Enemy\Enemy.cs" />
      <Compile Include="Assets\Script\PlayerScript\PlayerMovement.cs" />
+     <Compile Include="Assets\Script\Enemy\Anjing.cs" />
+     <Compile Include="Assets\Script\Enemy\Kodok.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2020.3.5f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
