+penambahan enemy senjata
-bug pada bullet, masih bercollision dengan enmy harusnya ke player saja dan ground

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -44,6 +44,8 @@
      <Compile Include="Assets\Script\PlayerScript\PlayerMovement.cs" />
      <Compile Include="Assets\Script\Enemy\Anjing.cs" />
      <Compile Include="Assets\Script\Enemy\Kodok.cs" />
+     <Compile Include="Assets\Script\Enemy\Gun.cs" />
+     <Compile Include="Assets\Script\Enemy\Bullet.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2020.3.5f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
